@@ -1,4 +1,3 @@
-
 /*
  * The MIT License (MIT)
  *
@@ -22,10 +21,31 @@
  * CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 
-apply plugin: 'eclipse'
 
-eclipse {
-    classpath {
-        plusConfigurations += configurations.provided
+
+test {
+
+    // explicitly include or exclude tests
+    include 'com/moser/jmxweb/**'
+
+    // show standard out and standard error of the test JVM(s) on the console
+    // testLogging.showStandardStreams = true
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
+
+    // listen to events in the test execution lifecycle
+    beforeTest { descriptor ->
+        logger.lifecycle("Running test: " + descriptor)
+    }
+
+    // listen to standard out and standard error of the test JVM(s)
+    onOutput { descriptor, event ->
+        // logger.lifecycle("\tTest: " + descriptor + " produced standard out/err: " + event.message)
+        // logger.debug("\t" + event.message)
     }
 }
